bk_ida/gccida/c1/expand_builtin_apply_args_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply_args_1/src/builtins.c:1558:28: error: use of undeclared identifier 'machine_mode'
v7 = get_mode_alignment( ( machine_mode)v6) >> 3; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply_args_1/src/builtins.c:1561:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_REG( ( machine_mode)v6, i); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply_args_1/src/builtins.c:1562:30: error: use of undeclared identifier 'machine_mode'
v5 = adjust_address_1( v1, ( machine_mode)v6, v2, 1, 1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply_args_1/src/builtins.c:1567:30: error: use of undeclared identifier 'machine_mode'
v8 = adjust_address_1( v1, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 0LL, 1, 1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply_args_1/src/builtins.c:1574:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( 5 - ( ( target_flags & 0x2000000) == 0)), 
  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_apply_args_1/src/obj/builtins.o] Error 1
